--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,16 +1,16 @@
 @import "normalize.less";
 @import "variables.less";
+@import "blocks/start-game.less";
 @import "blocks/page-header.less";
 @import "blocks/main.less";
 @import "blocks/settings.less";
 @import "blocks/form.less";
-@import "blocks/info.less";
 @import "blocks/table.less";
 @import "blocks/rules.less";
 @import "blocks/game.less";
 @import "blocks/bet.less";
 @import "blocks/player.less";
-@import "blocks/chips-list.less";
+@import "blocks/chips.less";
 @import "blocks/modal.less";
 @import "blocks/context-menu.less";
 @import "scafolding.less";
