--- a/source/less/blocks/bet.less
+++ b/source/less/blocks/bet.less
@@ -5,8 +5,10 @@
   margin-bottom: 10px;
   padding: 0 10px;
 
+  font-size: 12px;
+
   background-image: linear-gradient(45deg,#3c3b36,#928f7d,#3c3b36);
-  border: 1px solid #fbffc3;
+  //border: 1px solid #fbffc3;
   border-radius: 2px;
 }
 
@@ -15,9 +17,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 80px;
-  height: 80px;
-  margin-bottom: 10px;
+  width: 60px;
+  height: 60px;
 
   border: 2px solid #fbffc3;
   border-radius: 50%;
