--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,26 +1,21 @@
-.form {
-  padding: 10%;
-}
-
 .form__label {
   display: flex;
   align-items: center;
 
-  padding-bottom: 5px;
-
-  font-family: @font2;
+  font-size: 14px;
   text-transform: capitalize;
-  text-shadow: 0 4px 10px #000;
+  cursor: pointer;
 }
 
 .form__input {
   box-sizing: border-box;
 
   width: 100%;
-  height: 30px;
+  //height: 30px;
   margin-bottom: 10px;
   padding: 5px;
 
+  font-size: 14px;
   font-family: @font2;
   font-weight: bold;
   color: #333333;
@@ -29,7 +24,7 @@
 
   border: 0;
   border-radius: 0;
-  box-shadow: 0 0 10px 0px black;
+  box-shadow: 0 1px 5px 0px black;
   opacity: 0.9;
 }
 
@@ -41,11 +36,8 @@
 }
 
 .form__legend {
-  padding-bottom: 5px;
-
-  font-family: @font2;
+  font-size: 14px;
   text-transform: capitalize;
-  text-shadow: 0 4px 10px #000;
 }
 
 .form__list {
@@ -64,53 +56,45 @@
     content: "";
     flex-shrink: 0;
     display: block;
-    margin-right: 10px;
-    margin-left: 1px;
+    margin-right: 6px;
     padding: 10px;
 
     border-radius: 50%;
-    box-shadow: 0 0 0 2px @font-color;
+    box-shadow: inset 0 0 0 2px @font-color;
     transition: box-shadow 0.3s ease;
-    cursor: pointer;
+
   }
 
   &:hover::before {
-    box-shadow: 0 0 0 2px gold;
+    box-shadow: inset 0 0 0 2px fade(#ffffff, 50%);
   }
 
   &:active::before {
-    box-shadow: 0 0 0 2px fade(#ffffff, 70%);
-    transition: none;
+    box-shadow: inset 0 0 0 2px fade(#ffffff, 20%);
+    //transition: none;
   }
 }
 
 .form__radio:checked + .form__label {
   &::before {
-    background-color: gold;
-    box-shadow:
-      0 0 0 2px #ffffff,
-      inset 0 0 0 4px #ffffff;
+    background-color: #000000;
+    box-shadow: inset 0 0 0 6px #ffffff;
   }
 
   &:hover::before {
-    box-shadow:
-      0 0 0 2px gold,
-      inset 0 0 0 4px #ffffff;
-    transition: box-shadow 0.3s ease-out;
+    box-shadow: inset 0 0 0 6px fade(#ffffff, 50%);
   }
 }
 
 .form__radio:focus + .form__label {
   &::before {
-    box-shadow: 0 0 0 2px gold;
+    box-shadow: inset 0 0 0 2px fade(#ffffff, 50%);
   }
 }
 
 .form__radio:focus:checked + .form__label {
   &::before {
-    box-shadow:
-      0 0 0 2px #ffffff,
-      inset 0 0 0 4px #ffffff;
-    transition: none;
+    box-shadow: inset 0 0 0 6px #ffffff;
+    //transition: none;
   }
 }
