--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,6 +1,8 @@
 .main {
+  position: relative;
+
   display: flex;
   flex-direction: column;
-  padding-top: 10px;
-  padding-bottom: 10px;
+
+  overflow: hidden;
 }
