--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  top: 50%;
+  top: 0;
   left: 50%;
   z-index: 20;
 
@@ -8,15 +8,16 @@
   box-sizing: border-box;
   width: 320px;
   margin-left: -160px;
-  margin-top: -177px;
   padding: 20px;
 
   background-color: #ffffff;
   border-top: 1px solid #c6c6c6;
-  border-radius: 10px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   box-shadow: 0 5px 10px 0 fade(#000000, 25%);
-  animation-name: scale;
-  animation-duration: 0.6s;
+  transition: transform 0.6s ease;
+  //animation-name: modal;
+  //animation-duration: 0.6s;
 }
 
 .modal-overlay {
@@ -30,6 +31,7 @@
   height: 100%;
 
   background-color: fade(#ffffff, 50%);
+  transition: opacity 0.6s ease;
 }
 
 .modal-text {
@@ -51,19 +53,16 @@
     1px 1px 1px #000000,
     -1px -1px 1px #000000;
   animation: opacity 2s ease;
+  opacity: 0;
 }
 
-@keyframes scale {
+@keyframes modal {
   0% {
-    transform: scale(0);
-  }
-
-  30% {
-    transform: scale(1, 0.05);
+    transform: translateY(-100%);
   }
 
   100% {
-    transform: scale(1);
+    transform: translateY(0);
   }
 }
 
