--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,12 +2,23 @@
   box-sizing: border-box;
 
   display: flex;
+  flex-direction: column;
+  align-items: center;
 
   width: 100%;
-  max-width: 600px;
-  height: 100%;
+  max-width: 400px;
   margin: auto;
-  padding: 0 10%;
+
+  transition: opacity 0.3s ease;
+}
+
+.page-header__title {
+  margin: 0 0 20px;
+  padding: 0;
+  font-size: 40px;
+  color: gold;
+  letter-spacing: 1px;
+  text-shadow: 0 4px 10px #000;
 }
 
 .page-header__settings {
@@ -15,17 +26,4 @@
 
   width: 100%;
   margin: auto;
-}
-
-.page-header__title {
-  align-self: center;
-
-  margin: 0;
-  margin-bottom: 20px;
-  padding: 0;
-
-  font-size: 30px;
-  color: gold;
-  letter-spacing: 1px;
-  text-shadow: 0px 4px 10px black;
 }
