--- a/source/less/blocks/rules.less
+++ b/source/less/blocks/rules.less
@@ -3,47 +3,44 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  margin-bottom: 30px;
+
+  line-height: 13px;
 }
 
 .rules__title {
   margin: 0;
-  margin-bottom: 14px;
 
-  font-size: 40px;
+  font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #396321;
-  text-shadow: -1px -1px 0 #14310a, 0px 1px 0px #789e60;
+  color: #2a441b;
 }
 
 .rules__first {
   margin: 0;
-  margin-bottom: 10px;
 
-  font-size: 20px;
-  color: #396321;
-  text-shadow: -0.5px -0.5px 0 #14310a, 0 0.5px 0 #789e60;
+  font-size: 12px;
+  color: #2a441b;
 }
 
 .rules__second {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 
-  font-size: 14px;
-  color: #396321;
-  text-shadow: -0.5px -0.5px 0 #14310a, 0 0.5px 0 #789e60;
-  //width: 500px;
+  font-size: 12px;
+  color: #2a441b;
+
   & svg {
     width: 100%;
-    font-size: 20px;
-    fill: #396321;
-    text-shadow: -0.5px -0.5px 0 #14310a, 0 0.5px 0 #789e60;
+    font-size: 12px;
+    fill: #2a441b;
   }
   & text {
     text-align: justify;
-    font: 20px @font;
-    fill: #396321;
-    text-shadow: -0.5px -0.5px 0 #14310a, 0 0.5px 0 #789e60;
+    font: 12px @font;
+    fill: #2a441b;
   }
 }
 
@@ -55,19 +52,18 @@
   align-items: center;
 
   width: 100%;
-  margin-bottom: 15px;
-  padding: 5px 10px;
+  padding: 10px;
 
-  font-size: 12px;
-  color: #396321;
+  font-size: 10px;
+  color: #2a441b;
   text-transform: uppercase;
-  text-shadow: -0.5px -0.5px 0 #14310a, 0 0.5px 0 #789e60;
+  line-height: 0;
 
-  border: 2px solid #fbffc3;
-  border-radius: 5px;
+  border: 1px solid #fbffc3;
+  border-radius: 20px;
 
   & span {
-    font-size: 18px;
+    font-weight: bold;
     color: #c7ce00;
   }
 }
