--- a/source/less/blocks/settings.less
+++ b/source/less/blocks/settings.less
@@ -1,10 +1,13 @@
 .settings {
-  background-color: #006400;
-  background-image: url("../img/blackjack.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px 2px #333;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+
+  transition: opacity 0.3s ease;
 }
 
 .settings__form {
