--- a/source/less/blocks/bet.less
+++ b/source/less/blocks/bet.less
@@ -13,16 +13,23 @@
 }
 
 .bet__circle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 
   width: 60px;
   height: 60px;
+  padding: 0;
 
+  list-style: none;
   border: 2px solid #fbffc3;
   border-radius: 50%;
   list-style: none;
+
+  & .chip {
+    top: 50%;
+    left: 50%;
+    margin-top: -15px;
+    margin-left: -15px;
+  }
 }
 
 .bet__circle-stack {
