--- a/source/less/blocks/chips.less
+++ b/source/less/blocks/chips.less
@@ -11,7 +11,7 @@
 
   width: 30px;
 
-  transition: transform 0.5s ease;
+  transition: transform 0.4s ease;
 }
 
 .chip {
@@ -23,9 +23,11 @@
   width: 30px;
   height: 30px;
 
-  transition: transform 0.5s ease;
+  transition: transform 0.4s ease;
   transform-origin: center center;
   cursor: pointer;
+  // perspective: 40px;
+  // perspective-origin: 50% 0;
 
   & svg {
     width: 30px;
