--- a/source/less/blocks/context-menu.less
+++ b/source/less/blocks/context-menu.less
@@ -42,10 +42,20 @@
   background-image: @background;
   border: none;
   border-radius: 2px;
+  transition: 0.6s ease;
   cursor: pointer;
 
-  &:hover .chip {
-    animation: rotate-360 2s ease;
+  &:hover {
+    box-shadow: inset 0px 0px 20px 10px #004000;
+  }
+
+  &:hover span {
+    animation: arrow 0.6s ease;
+    animation-iteration-count: infinite;
+  }
+
+  &:active {
+    opacity: 0.7;
   }
 
   &--1to5 .context-menu__pile,
@@ -140,16 +150,16 @@
   position: relative;
 }
 
-@keyframes rotate-360 {
+@keyframes arrow {
   from {
-    transform: rotateY(0);
+    transform: translateX(0);
   }
 
   50% {
-    transform: rotateY(360deg);
+    transform: translateX(3px);
   }
 
   to {
-    transform: rotateY(0);
+    transform: translateX(0);
   }
 }
