--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 50%;
   z-index: 20;
 
@@ -12,12 +12,11 @@
 
   background-color: #ffffff;
   border-top: 1px solid #c6c6c6;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  box-shadow: 0 5px 10px 0 fade(#000000, 25%);
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  box-shadow: 0 0 10px 0 fade(#000000, 25%);
+  transform: translateY(110%);
   transition: transform 0.6s ease;
-  //animation-name: modal;
-  //animation-duration: 0.6s;
 }
 
 .modal-overlay {
@@ -52,8 +51,7 @@
   text-shadow:
     1px 1px 1px #000000,
     -1px -1px 1px #000000;
-  animation: opacity 2s ease;
-  opacity: 0;
+  transition: opacity 0.6s ease;
 }
 
 @keyframes modal {
