--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -4,9 +4,10 @@
 @font-size: 16px;
 @line-height: 20px;
 @background: radial-gradient(#82ab68, #004000);
+@background2: radial-gradient(#004000, #82ab68);
 @button-background-from: #380e0d;
 @button-background-to: #5f1e08;
 @tablet-width: 768px;
 @desktop-width: 1100px;
 @mobile-width-only: 767;
-@transition-duration: 1s;
+@transition-duration: 0.4s;
